---- Changes since 4.12 ----
Updated to Coppermine script installer to version 1.5.34, Drupal to 7.34 and 6.34, Piwik to 2.9.1, TikiWiki to 13.1 and 12.3, Moodle to 2.8.1, ownCloud to 6.0.6 and 7.0.4, phpMyFAQ to 2.8.18, Ghost to 0.5.7, WordPress to 4.1, phpMyAdmin to 4.3.4, 4.2.13.1, 4.1.14.8 and 4.0.10.7, Magento to 1.9.1.0, MediaWiki to 1.24.1 and 1.19.23, Trac to 1.0.2 and 0.12.6, DokuWiki to 2014-09-29b, Mantis to 1.2.18, Joomla to 2.5.28, Pydio to 6.0.2, Revive Adserver to 3.1.0, Node.JS to 0.10.35, Roundcube to 1.0.4, Dolibarr to 3.6.2, SugarCRM to 6.5.20, Django to 1.7.2 and 1.14.17, FengOffice to 3.0.1, and MoinMoin to 1.9.8.
A default shell can now be selected for reseller Unix accounts, independent of the domain owner default shell.
Added a Change Language link the on left menu for easily switching the UI language.
For new installs, a single logrotate configuration block will now be shared by all virtual servers. For existing systems, whether to use a shared or separate blocks can be set on the Server Templates page.
The hash format (SHA1 or SHA2) for new certificates can now be selected at creation time, and the default set on the Virtualmin Configuration page.
Added a Virtualmin Configuration page option to control whether a * or an IP is used in Apache VirtualHost blocks.
All operations performed by Virtualmin on files in a domain's home directory are now done with the user's permissions, to prevent attacks involving a malicious symbolic or hard link.
Added the Disassociate Features page for adding and removing features from a virtual server without actually changing the underlying configuration files.
Added APIs that allow Virtualmin to define the preferred left and right frame contents for a theme, rather than requiring theme authors to write code for this.
---- Changes since 4.13 ----
Updated the phpMyAdmin script installer to version 4.3.6 and 4.0.10.8.