@@ -202,7 +202,6 @@ hashpass=0
 hashtypes=*
 maillog_hide=0
 own_restore=0
-sni_support=1
 mx_validate=1
 lookup_domain_serial=0
 ipfollow=0
