@@ -1,22 +1,0 @@
-<header>Meerdere SSL websites op hetzelfde IP adres toestaan?</header>
-
-Standaard (wanneer deze optie op <b>Nee</b> is ingesteld) zal Virtualmin een
-waarschuwing geven als u twee SSL websites wilt verbinden aan hetzelfde IP
-adres zonder een certificaat wat gebruikt kan worden door beide domeinen.
-Dit is erg belangrijk omdat het originele HTTP protocol geen mogelijkheid
-geeft aan de webserver om het juiste certificaat te selecteren in deze
-situatie. <p>
-
-Echter een verbetering voor het SSL protocol genaamd SNI (server naam
-identificatie) lost dit probleem op door toe te staan dat de web browser een
-hostnaam verstuurd voordat er een SSL certificaat selectie word gedaan. Alle
-moderne browsers ondersteunen deze extensie, alleen IE6 en lager en alle IE
-versies op Windows XP ondersteunen dit niet. <p>
-
-Door <b>Ja</b> te selecteren voor deze optie zal de waarschuwing worden verwijdert
-wanneer twee SSL websites op hetzelfde IP adres worden gezet, houd er rekening mee
-dat alle web browsers die nu verbinden met uw websites SNI moeten ondersteunen.
-Als een browser zonder SNI ondersteuning verbinding maakt zal de gebruiker een
-waarschuwing krijgen over een verkeerd certificaat. <p>
-
-<footer>
