@@ -424,7 +424,6 @@ setup_edepwebalizer=Webalizer cannot be enabled unless a website is configured
 setup_edepssl=SSL cannot be enabled unless a website is configured
 setup_edepssl4=SSL cannot be enabled as there is already an Apache virtual host on IP address $1 and port $2
 setup_edepssl5=SSL cannot be enabled for more than one domain on the IP address $1 unless a virtual IP interface or private port is enabled, or the certificate can be used for this domain. The current certificate is only valid for : $2, and it is being used by $3.
-setup_edepssl5sni=SSL is being enabled for more than one domain on the IP address $1. Apache on your system supports SNI, which will allow modern browsers to get the correct certificate in this situation. However, older browsers may see the first certificate for the IP, which is only valid for : $2
 setup_edepftp=Virtual FTP cannot be enabled unless a virtual IP address is allocated
 setup_edepspam=Spam filtering cannot be enabled unless email is
 setup_edepspamvpop=Spam filtering cannot be used with VPopMail
@@ -1903,7 +1902,6 @@ check_ehomebase=The home base directory $1 is not an absolute path. This can be 
 check_ehomebase2=The home base directory $1 is not an absolute path. This can be corrected on the <a href='$2'>Users and Groups module configuration</a> page.
 check_ehomeformat=The home directory format $1 does not contain the username or domain name. This can be corrected on the <a href='$2'>Virtualmin configuration</a> page.
 check_ehomestyle=The home directory style is set to "Just base directory", which is unusable with Virtualmin. This can be corrected on the <a href='$2'>Users and Groups module configuration</a> page.
-check_esni=Multiple SSL websites on the same IP address have been enabled on the <a href='$1'>Virtualmin Configuration</a> page, but your web server does not support this feature.
 
 checkmap_enone=No map sources were found in the <a href='$1'>Postfix configuration</a>
 checkmap_esupport=The map source <tt>$1</tt> is not supported by Postfix - you may need to install Postfix libraries for it, or re-compile
